# Henon-Heiles

./: LICENSE  README.md  plot.jl
armadillo/: .gitignore  CMakeLists.txt  main.cpp
armadillo/src/: CMakeLists.txt  constants.h  file_names.cpp  file_names.h  utils.cpp  utils.h
armadillo/src/methods/: CMakeLists.txt  kahans.cpp  kahans.h  rk4.cpp  rk4.h  sb.cpp  sb.h  sv.cpp  sv.h
armadillo/src/problems/: CMakeLists.txt  compute.cpp  compute.h  hamiltonian.cpp  hamiltonian.h  poincare.cpp  poincare.h
eigen/: CMakeLists.txt  main.cpp
eigen/src/: CMakeLists.txt  constants.h  storage_info.cpp  storage_info.h  utils.cpp  utils.h
eigen/src/methods/: CMakeLists.txt  kahans.cpp  kahans.h  rk4.cpp  rk4.h  sb.cpp  sb.h  sv.cpp  sv.h
eigen/src/problems/: CMakeLists.txt  compute.cpp  compute.h  hamiltonian.cpp  hamiltonian.h  poincare.cpp  poincare.h
